Fixed spacing for collapse button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,10 @@ a {
     color: rgba(0,0,0,.7) !important;
 }
 
-.buttonz > button {
-    
+.buttonz {
+    width:100%;
 }
+    
 
 .logo {
     font-size:1.5em;
